@@ -3,7 +3,7 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/home/gepr/local/btr/bsg/src/bsg/util/CollectionUtils.java</file>
+            <file>file:/home/gepr/local/bsg/src/bsg/util/CollectionUtils.java</file>
         </group>
     </open-files>
 </project-private>
